--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Print!</title>
+	<link rel="apple-touch-icon" href="icon.png" sizes="144x144"> <!-- iPad Retina -->
 </head>
 <body>
 	<form action="/print" method="post">
